hphp/test/slow/case_type_missing_class2.php.expectf
Fatal error: Unknown type or class E|Foo in %s/case_type_missing_class2.php on line 8
